--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -4,28 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Name - Maitrey Talware**\n",
-    "# **NetId- mt3915**\n",
-    "### Perceptron Code"
+    "# Perceptron Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-a0841e6d7f18>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-a0841e6d7f18>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Try the code with different values of \"theta\"\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Try the code with different values of \"theta\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Number of iterations 23\n",
-      "final weight\n",
-      " [[ 5. -3.]\n",
-      " [ 3.  7.]\n",
-      " [-3.  5.]]\n",
-      "final bias\n",
-      " [-1.  3.]\n"
-     ]
+     "text": "Number of iterations 23\nfinal weight\n [[ 5. -3.]\n [ 3.  7.]\n [-3.  5.]]\nfinal bias\n [-1.  3.]\n"
     }
    ],
    "source": [
